--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,17 +3,6 @@ html,body{
     height: 100%;
 }
 
-/* #p1 { background-image: url('/images/flowerpiano-noName.jpg');
-background-image: no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  min-height: 00px;
-  height: 100%;
-  border: 1px solid blue;
-} */
-
 /* nav & title */
 h1, .nav-pills>li>a {
   color: #264653;
@@ -86,21 +75,60 @@ h1, .nav-pills>li>a {
 }
 .pink{
   order: 4;
-  background-image: url("https://loremflickr.com/320/240");
+  background-image: url("/images/amy.jpg");
+  /* background-repeat: no-repeat; */
+  background-size:contain;
+
 }
 .blue{
    order: 3;
-   background-image: url("https://loremflickr.com/320/240");
+   background-image: url("/images/jayanti.jpg");
+   /* background-repeat: no-repeat; */
+   background-size:contain;
+
 }
 .breeze {
     order: 2;
-    background-image: url("https://loremflickr.com/320/240");
+    background-image: url("/images/yamuna.jpg");
+    /* background-repeat: no-repeat; */
+    background-size:contain;
+
 }
 .yellow{
   order: 1;
-  background-image: url("https://loremflickr.com/320/240");
+  background-image: url("/images/chay.jpg");
+  /* background-repeat: no-repeat; */
+  background-size:contain;
+
 }
 
+#chay {
+  color: white;
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+  font-size: 20px;
+  margin-top: 80%;
+}
+
+#yamuna {
+  color: white;
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+  font-size: 20px;
+  margin-top: 80%;
+}
+
+#jayanti {
+  color: white;
+  margin-top: 80%;
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+  font-size: 20px;
+}
+
+#amy {
+  color: white;
+  margin-top: 80%;
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+  font-size: 20px;
+}
 
 /*Horizontal and vertical alignment*/
 .flex-center-center{
@@ -166,9 +194,6 @@ border: 1rem solid white;
 background:  #2A9D8F;
 }
 
-
-
-
 .metStory{
   text-shadow: 1px 1px 20px rgba(0, 16, 101, 1);
 }
@@ -178,79 +203,6 @@ background:  #2A9D8F;
   text-shadow: 1px 1px 20px rgba(0, 16, 101, 1);
   font-weight: bold;
 }
-
-/* #stars{
-  height: 20px;
-  width:100%;
-  background-image: url('/images/stars.gif');
-} */
-
-/* #stringLights{
-  background-image: url('/images/lights.png');
-  background-image: no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 500px;
-  height:10px;
-  width:100%;
-} */
-
-
-/* .scrollTitle{
-  background-image: url('/images/piano-text.jpg');
-text-shadow: 0px 0px 14px rgba(0, 16, 37, 1);
-color: white;
-} */
-
-/*scroll box wedding*/
-/* .scrollArea {
-max-width: 520px;
-max-height: 350px;
-margin-top: 85px;
-padding-left: 5px;
-padding-right: 5px;
-border-color: #fff;
-border-width: 1px;
-border-style: solid;
-float: left;
-overflow-y: scroll;
-text-align: center;
-margin-left: -30px;
--webkit-box-shadow: inset -8px -24px 300px 78px rgba(0,0,0,0.83);
--moz-box-shadow: inset -8px -24px 300px 78px rgba(0,0,0,0.83);
-box-shadow: inset -8px -24px 300px 78px rgba(0,0,0,0.83);
-
-} */
-
-/* ::-webkit-scrollbar {
-    width: 4px;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-	background: rgba(255,255,255,0.5);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
- */
-
-/* iframe {
-  width:520px;
-  height: 360px;
-  text-align: center;
-  margin-left: -30px;
-  margin-right: 500%;
-  float: left;
-
-} */
-
-
 
 h2, h3, h4 {
 	color: white;
@@ -298,4 +250,11 @@ h1,  {
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 30.8px;
+}
+
+#lovevideo {
+  max-width: 100%;
+  max-height: auto;
+  border: 5px solid white;
+  margin-top: 1%;
 }
