--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,17 +44,29 @@ h1, .nav-pills>li>a {
      text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
      padding-bottom: 15%;
      font-size: 50px;
-
+     border: 15px solid white;
 }
 
 .header {
   font-family: 'Pacifico', cursive;
 }
 
+#header-pic {
+  background-image: url('/images/rainbowSprings.png');
+  background-image: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    max-height:80%;
+    max-width:100%;
+    border: 2px solid black;
+}
+
 /* nav bar */
 .nav-pills>li{
   background:silver;
-  border: 1px solid blue;
+  border: 1px solid white;
 
 }
 
@@ -72,7 +84,8 @@ h1, .nav-pills>li>a {
   flex-direction: row;
   align-items: stretch;
   width: 100%;
-  background: black;
+  background: pink;
+border: 1px solid black;
   justify-content: space-around;
   padding: 2rem;
 }
@@ -82,7 +95,6 @@ h1, .nav-pills>li>a {
   width:25%;
   background:silver;
   padding: 1rem;
-  border: 1rem dashed #E9C46A;
 }
 
 /*order wedding party*/
@@ -90,14 +102,13 @@ h1, .nav-pills>li>a {
   border-radius: 50%;
   height: 200px;
   width: 200px;
-  background:silver;
+  /* background:silver; */
   padding: 1rem;
-  border: 1px solid blue;
+  border: 1px solid white;
   cursor: url('/images/heart-small.png'), auto;
 }
 
 .container-order > .box{
-  border: 1rem dashed #E76F51;
   font-size: 4rem;
   font-weight: bold;
 }
@@ -180,6 +191,7 @@ h1, .nav-pills>li>a {
   font-size: 5rem;
   color: purple;
 border: 1rem solid white;
+
 }
 .col-1{
 	flex: 1;
@@ -211,9 +223,14 @@ border: 1rem solid white;
   flex: 1 0 auto;
   font-weight: bold;
   font-size: 5rem;
-  text-transform: uppercase;
   color: #264653;
-  border: 1rem dashed #E76F51;
+  border: 5px solid white;
+  background-image: url('/images/white-wedding-flowers.jpg');
+  background-image: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .sticky-footer{
   flex: 0 0 auto;
@@ -238,19 +255,6 @@ h2, h3, h4 {
 	color: white;
 }
 
-
-#header-pic {
-  background-image: url('/images/flowerpiano-noName.jpg');
-  background-image: no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    max-height:100%;
-    max-width:100%;
-    border: 2px solid black;
-}
-
 @media (max-width: 300px) {
   #header-pic {
     background-color: black;
@@ -266,9 +270,10 @@ h2, h3, h4 {
 
 #rainbow-springs {
   border-radius: 55px;
-  -webkit-box-shadow: 2px 2px 34px 8px rgba(74,4,74,1);
--moz-box-shadow: 2px 2px 34px 8px rgba(74,4,74,1);
-box-shadow: 2px 2px 34px 8px rgba(74,4,74,1);
+  -webkit-box-shadow: 2px 0px 113px 0px rgba(138,90,138,1);
+  -moz-box-shadow: 2px 0px 113px 0px rgba(138,90,138,1);
+  box-shadow: 2px 0px 113px 0px rgba(138,90,138,1);
+  border: 2px dashed purple;
 }
 
 h1,  {
@@ -293,6 +298,6 @@ h1,  {
 #lovevideo {
   max-width: 100%;
   max-height: auto;
-  border: 5px solid white;
+  border: 3px solid black;
   margin-top: 1%;
 }
